--- a/templates/catalog-info.yaml
+++ b/templates/catalog-info.yaml
@@ -14,6 +14,7 @@ spec:
     # - ./model-package-promote-pipeline/template-model-package-promote-pipeline.yaml
     # - ./notebook/template-notebook.yaml
     - ./service-catalog-templates/template-service-catalog-templates.yaml
+    - ./aws-circleci-docker/template.yaml
 ---
 apiVersion: backstage.io/v1alpha1
 kind: System
